fixed navbar height, footer vertical alignment. Switched to CSS grid areas

--- a/styles.css
+++ b/styles.css
@@ -1,45 +1,50 @@
 
 
+
+
 body {
-    background-color: #c1cdcd;
-    margin: 0;
-    padding: 0;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    display: grid;
-    grid-template-columns: 1fr 3fr;
-    grid-template-rows: 100%; /** ¿Por qué no rellena la altura de la fila al 100%? **/
-  }
-  
-  nav {
-    background-color: #c1ffc1;
-    grid-column: 1 / 2;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 40px auto;
-  }
-  
-  nav > header{
-    background-color: #7ccd7c;
-  }
-  
-  nav > footer{
-    background-color: #adcd7c;
-    height: 60px;
-    font-size: 80%;
-    akign-self: end;
-  }
-  
-  main {
-    background-color: #fdf5e6;
-    grid-column: 2 / 3;
-  }
-  
-  section {
-    background-color: #eec591;
-  }
-  
-  section > header {
-    background-color: #8b3e2f;
-  }
+  background-color: #c1cdcd;
+  margin: 0;
+  padding: 0;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-template-areas: "sidebar content";
+}
+
+nav {
+  background-color: #c1ffc1;
+  grid-area: sidebar;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 40px auto;
+  min-height: 100vh;
+}
+
+nav>header {
+  background-color: #7ccd7c;
+}
+
+nav>footer {
+  background-color: #adcd7c;
+  height: 60px;
+  font-size: 80%;
+  align-self: end;
+}
+
+main {
+  background-color: #fdf5e6;
+  grid-area: content;
+}
+
+section {
+  background-color: #eec591;
+}
+
+section>header {
+  background-color: #8b3e2f;
+}
+
+
   
   
